fix: minor bug w/shadow overlay when link wrapping grid image is focused

--- a/src/assets/styles/components/media-grid.css
+++ b/src/assets/styles/components/media-grid.css
@@ -67,6 +67,13 @@
     border: 0
   }
 
+  & a:focus .shadow::after,
+  & a:focus-within .shadow::after {
+    left: 0;
+    width: 100%;
+    height: 100%
+  }
+
   & .meta-text {
     position: absolute;
     z-index: 2;
